# user-details

./: MANIFEST.in  README.rst  pyproject.toml
user_details.egg-info/: PKG-INFO  SOURCES.txt
user_details/get_data/: apps.py  urls.py  views.py
user_details/get_data/templates/: 404_error.html  get_details.html
user_details/user_details/: asgi.py  settings.py  urls.py  wsgi.py
